* Change textview to TehilimTextView in YehiRatzonFragment * Change default font to 15 * Change language to be configured via preferences

--- a/Tehilim/res/layout/yehi_fragment.xml
+++ b/Tehilim/res/layout/yehi_fragment.xml
@@ -5,7 +5,7 @@
     android:background="@drawable/old_paper_background"
     >
 
-        <TextView 
+        <com.karriapps.tehilimlibrary.utils.TehilimTextView 
             android:id="@+id/text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
