* Fixing parcelable in TehilimGenerator * Adding TikunKlaliGenerator and SickPrayerGenerator * Enabling the buttons for Yehi Ratson to be shown in tehilim book view

--- a/Tehilim/res/values/tfilot.xml
+++ b/Tehilim/res/values/tfilot.xml
@@ -31,7 +31,7 @@
 ]]> </string>
 
     <string name="afterSick"> <![CDATA[
-מִי שֶׁבֵּרַךְ אֲבוֹתֵינוּ וְאִמוֹתֵינוּ אַבְרָהָם יִצְחָק וְיַעֲקֹב, מֹשֶׁה וְאַהֲרֹן, דָּוִד וּשְׁלֹמֹה, שָׂרָה רִבְקָה רָחֵל וְלֵאָה, הוּא יְבָרֵךְ וִירַפֵּא אֶת כָּל חוֹלֵינוּ וְאֵת <small>יאמר כאן את שם החולה ושם אמו של החולה</small> בַּעֲבוּר שֶׁאֲנַחְנוּ מִתְפַּלְלִים לְהַחֲלָמָתָם. בִּשְׂכַר זֶה הַקָּדוֹשׁ בָּרוּךְ הוּא יִמָּלֵא רַחֲמִים עֲלֵיהֶם לְהַחֲלִימָם וּלְרַפְּאֹתָם וּלְהַחֲזִיקָם וּלְהַחֲיוֹתָם וְיִשְׁלַח לָהֶם מְהֵרָה רְפוּאָה שְׁלֵמָה מִן הַשָּׁמַיִם, עִם כָּל חוֹלֵי יִשְׂרָאֵל, רְפוּאַת הַנֶּפֶשׁ וּרְפוּאַת הַגּוּף, מִלִּזְעוֹק וּרְפוּאָה קְרוֹבָה לָבוֹא, הַשְׁתָּא בַּעֲגָלָא וּבִזְמַן קָרִיב וְנֹאמַר אָמֵן.
+מִי שֶׁבֵּרַךְ אֲבוֹתֵינוּ וְאִמוֹתֵינוּ אַבְרָהָם יִצְחָק וְיַעֲקֹב, מֹשֶׁה וְאַהֲרֹן, דָּוִד וּשְׁלֹמֹה, שָׂרָה רִבְקָה רָחֵל וְלֵאָה, הוּא יְבָרֵךְ וִירַפֵּא אֶת כָּל חוֹלֵינוּ וְאֵת <small>%1$s</small> בַּעֲבוּר שֶׁאֲנַחְנוּ מִתְפַּלְלִים לְהַחֲלָמָתָם. בִּשְׂכַר זֶה הַקָּדוֹשׁ בָּרוּךְ הוּא יִמָּלֵא רַחֲמִים עֲלֵיהֶם לְהַחֲלִימָם וּלְרַפְּאֹתָם וּלְהַחֲזִיקָם וּלְהַחֲיוֹתָם וְיִשְׁלַח לָהֶם מְהֵרָה רְפוּאָה שְׁלֵמָה מִן הַשָּׁמַיִם, עִם כָּל חוֹלֵי יִשְׂרָאֵל, רְפוּאַת הַנֶּפֶשׁ וּרְפוּאַת הַגּוּף, מִלִּזְעוֹק וּרְפוּאָה קְרוֹבָה לָבוֹא, הַשְׁתָּא בַּעֲגָלָא וּבִזְמַן קָרִיב וְנֹאמַר אָמֵן.
 <br><br>
 יְיָ יְיָ אל רחום וחנון ארץ אפיים ורב חסד ואמת נוצר חסד לאלפים נושא עוון פשע וחטאה ונקה
 <br><br>
@@ -40,6 +40,22 @@
 ואתה בידך נפש כל חי ורוח כל בשר איש. ובידך כח וגבורה לגדל ולחזק ולרפאות אנוש עד דכא, עד דכדוכה של נפש ולא יפלא ממך כל דבר, ובידך נפש כל חי. לכן יהי רצון מלפניך האל הנאמן אב הרחמים הרופא לכל תחלואי עמך ישראל הקרובים עד שערי מות, והמחבש מזור ותעלה לידידיו, והגואל משחת חסידיו, והמציל ממות נפש מרודיו, אתה רופא נאמן. שלח מרפא וארוכה ותעלה ברוב חסד וחנינה וחמלה לנפש <small>%1$s</small>, לרוחו ונפשו האומללה, ולא תרד נפשו לשאול, ותתמלא רחמים עליו להחלימו ולרפאותו ולהחזיקו ולהחיותו כרצון כל קרוביו ואוהביו, ויראו לפניך זכיותיו וצדקותיו, ותשליך במצלות ים כל חטאתיו, ויכבשו רחמיך את כעסך מעליו, ותשלח לו רפואה שלימה רפואת הנפש ורפואת הגוף, ותחדש כנשר נעוריו, ותשלח לו.. ולכל חולי ישראל מרפא ארוכה, מרפא ברכה, מרפא תרופה ותעלה, מרפא חנינה וחמלה, מרפא ידועים וגלוים, מרפא רחמים ושלום וחיים, מרפא אורך ימים ושנים טובים, ויקוים בו (בה) ובכל חולי עמך ישראל מקרא שכתוב על ידי משה עבדך נאמן ביתך, ויאמר: אם שמוע תשמע לקול יהוה אלהיך והישר בעיניו תעשה והאזנת למצותיו ושמרת כל חקיו כל המחלה אשר שמתי במצרים לא אשים עליך כי אני יהוה רופאך: ועבדתם את אלהיכם וברך את לחמך ואת מימיך והסירותי מחלה מקרבך: לא תהיה משכלה ועקרה בארצך את מספר ימיך אמלא: והסיר יהוה ממך כל חולי וכל מדוי מצרים הרעים אשר ידעת לא ישימם בך ונתנם בכל שונאיך: ועל ידי עבדיך הנביאים כתוב לאמר ואכלתם אכול ושבוע והללתם את שם יהוה אלהיכם אשר עשה עמכם להפליא ולא יבושו עמי לעולם: דרכיו ראיתי וארפאהו ואנחהו ואשלם ניחומים לו ולאבליו: בורא ניב שפתיים שלום שלום לרחוק ולקרוב אמר יהוה ורפאתיו: וזרחה לכם יראי שמי שמש צדקה ומרפא בכנפיה: אז יבקע כשחר אורך וארוכתך מהרה תצמח: רפאינו יהוה ונרפא הושיענו ונושעה כי תהילתנו אתה:
  <br>
 והעלה רפואה שלימה לכל מכות עמך ישראל ובפרט ל <small>%1$s</small> רפואה שלימה לרמ\"ח איבריו ושס\"ה גידיו, לרפאות אותו כחזקיהו מלך יהודה מחליו, וכמרים הנביאה מצרעתה, בשם השמות הקדושים של שלש עשרה מדותיך, אל נא רפא נא ל <small>%1$s</small> להקים אותו מחליו זה, ולהאריך עוד ימי חייו חיים של רחמים, חיים של בריאות, חיים של שלום, חיים של ברכה, כדכתיב כי אורך ימים ושנות חיים ושלום יוסיפו לך, אמן סלה.
+<br>
+]]> </string>
+
+<string name="tikunBefore">
+<![CDATA[
+הֲרֵינִי מְזַמֵּן אֶת פִּי לְהוֹדוֹת וּלְהַלֵּל וּלְשַׁבֵּחַ אֶת בּוֹרְאִי לְשֵׁם יִחוּד קֻדְשָׁא בְּרִיךְ הוּא וּשְׁכִינְתֵּה בִּדְחִילוּ וּרְחִימוּ עַל יְדֵי הַהוּא טָמִיר וְנֶעְלָם בְּשֵׁם כָּל יִשְׂרָאֵל:
+<br><br>
+הֲרֵינִי מְקַשֵׁר עַצְמִי בַּאֲמִירַת הָעֲשָׂרָה מִזְמוֹרִים אֵלּוּ לְכָל הַצַּדִּיקִים הָאֲמִתִּיִּים שֶׁבְּדוֹרֵנוּ. וּלְכָל הַצַּדִּיקִים הָאֲמִתִּים שׁוֹכְנֵי עָפָר. קְדוֹשִׁים אָשֵׁר בָּאָרֶץ הֵמָּה. וּבִפְרָט לְרַבֵּנוּ הַקָּדוֹשׁ צַדִּיק יְסוֹד עוֹלָם נַחַל נוֹבֵעַ מְקוֹר חָכְמָה רַבֵּנוּ נַחְמָן בֶּן פֵיגֶא שגילה תיקון זה. זְכוּתָם יָגֵן עָלֵינוּ וְעַל כָּל יִשְׂרָאֵל אָמֵן
+<br>
+]]>    
+</string>    
+
+<string name="afterTikunKlali"> <![CDATA[
+מִי יִתֵּן מִצִּיּוֹן יְשׁוּעַת יִשְׂרָאֵל, בְּשּׁוּב אֲדֹנָי שְׁבוּת עַמּוֹ - יָגֵל יַעֲקֹב, יִשְׂמַח יִשְׂרָאֵל. וּתְשׁוּעַת צַדִּיקִים מֵאֲדֹנָי מָעוּזָּם בְּעֵת צָרָה. וַיַּעְזְרֵם אֲדֹנָי וַיְפַלְּטֵם, יְפַלְּטֵם מֵרְשָׁעִים וְיוֹשִׁיעֵם כִּי חָסוּ בּוֹ.
+<br><br>
+רִבּוֹנוֹ שֶׁל עוֹלָם, עִלַּת הָעִלּוֹת וְסִבַּת כָּל הַסִּבּוֹת, אַנְתְּ לְעֵלָּא, לְעֵלָּא מִן כֹּלָּא, וְלֵית לְעֵלָּא מִנָּךְ, דְלֵית מַחֲשָׁבָה תְּפִיסָא בָּךְ כְּלָל. וּלְךָ - דּוּמִיָּה תְהִלָּה; וּמְרוֹמָם עַל כָּל בְּרָכָה וּתְהִלָּה. אוֹתְךָ אֶדְרֹשׁ, אוֹתְךָ אֲבַקֵּשׁ, שֶׁתַּחְתֹּר חֲתִירָה דֶּרֶךְ כְּבוּשָׁה מֵאִתְּךָ, דֶּרֶךְ כָּל הָעוֹלָמוֹת עַד הַהִשְׁתַּלְשְׁלוּת שֶׁלִּי, בַּמָּקוֹם שֶׁאֲנִי עוֹמֵד, כְּפִי אֲשֶׁר נִגְלֶה לְךָ, יוֹדֵעַ תַּעֲלוּמוֹת. וּבַדֶּרֶךְ וְנָתִיב הַזֶּה תָּאִיר עָלַי אוֹרְךָ, לְהַחֲזִירֵנִי בִּתְשׁוּבָה שְׁלֵמָה לְפָנֶיךָ בֶּאֱמֶת, כְּפִי רְצוֹנְךָ בֶּאֱמֶת; כְּפִי רְצוֹן מִבְחַר הַבְּרוּאִים: לִבְלִי לַחְשֹׁב בְּמַחֲשַׁבְתִּי שׁוּם מַחֲשֶּׁבֶת חוּץ וְשׁוּם מַחֲשָׁבָה וּבִלְבּוּל שֶׁהוּא נֶגֶד רְצוֹנֶךָ. רַק לְדַבֵּק בְּמַחֲשָׁבוֹת זַכּוֹת, צַחוֹת וּקְדוֹשׁוֹת בַּעֲבוֹדָתְך בֶּאֱמֶת, בְּהַשָּׂגָתְךָ וּבְתוֹרָתֶךָ. הַט לִבִּי אֶל עֵדְוֹתֶיך וְתַן לִי לֵב טָהוֹר לְעָבְדְּךָ בֶּאֱמֶת. וּמִמְּצוּלוֹת יָם תּוֹצִיאֵנִי לְאוֹר גָּדוֹל חִישׁ קַל מְהֵרָה, תְּשׁוּעַת אֲדֹנָי כְּהֶרֶף עַיִן, לֵאוֹר בְּאוֹר הַחַיִּים, כָּל יְמֵי הֱיוֹתִי עַל פְּנֵי הָאֲדָמָה; וְאֶזְכֶּה לְחַדֵּש נְעוּרָי, הַיָּמִים שֶׁעָבְרוּ בַּחֹשֶׁךְ לְהַחֲזִירָם אֶל הַקְּדֻשָּׁה. וְתִהְיֶה יְצִיאָתִי מִן הָעוֹלָם כְּבִיאָתִי: בְּלֹא חֵטְא. וְאֶזְכֶּה לַחֲזוֹת בְּנֹעַם אֲדֹנָי וּלְבַקֵּר בְּהֵיכָלוֹ, כֻּלּוֹ אוֹמֵר כָּבוֹד. אָמֵן נֶצַח סֶלָה וָעֶד.
 <br>
 ]]> </string>
 
