--- a/Tehilim/res/layout/tehilim_row.xml
+++ b/Tehilim/res/layout/tehilim_row.xml
@@ -7,7 +7,7 @@
  
 <com.karriapps.tehilimlibrary.utils.TehilimTextView   
     android:id="@+id/title"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:textColor="@color/titleColor"
     android:padding="10dp"
