--- a/Tehilim/res/values/style.xml
+++ b/Tehilim/res/values/style.xml
@@ -10,7 +10,7 @@
         <item name="action_favorite_icon">@drawable/favorite_button_dark</item>
         <item name="ic_launcher">@drawable/ic_launcher_dark</item>
         <item name="text_color">@android:color/white</item>
-        <item name="side_background">@drawable/tiled_background_dark</item>
+        <item name="side_background">@android:color/darker_gray</item>
         <item name="choose_items_icon">@drawable/ic_action_storage_dark</item>
         <item name="actionBarItemBackground">@drawable/selectable_background_tehilim_dark</item>
         <item name="popupMenuStyle">@style/PopupMenu.Tehilim_dark</item>
@@ -33,7 +33,7 @@
         <item name="action_favorite_icon">@drawable/favorite_button</item>
         <item name="ic_launcher">@drawable/ic_launcher</item>
         <item name="text_color">@android:color/black</item>
-        <item name="side_background">@drawable/tiled_background</item>
+        <item name="side_background">@android:color/background_light</item>
         <item name="choose_items_icon">@drawable/ic_action_storage</item>
         <item name="actionBarItemBackground">@drawable/selectable_background_tehilim</item>
         <item name="popupMenuStyle">@style/PopupMenu.Tehilim</item>
@@ -50,6 +50,9 @@
     <color name="pressed_tehilim">#CCFFBB33</color>
     <color name="pressed_tehilim_dark">#CCFFBB33</color>
     <color name="light_gray">#bdc3c7</color>
+    <color name="facebook_color">#3b5998</color>
+    <color name="gmail_color">#c0392b</color>
+    <color name="git_color">#f14e32</color>
 
     <style name="ActionBar.Solid.Tehilim" parent="@style/Widget.AppCompat.Light.ActionBar.Solid">
         <item name="background">@drawable/ab_solid_tehilim</item>
