* Added Yahrzeit * Fixed theme issues

--- a/Tehilim/res/layout/tehilim_row.xml
+++ b/Tehilim/res/layout/tehilim_row.xml
@@ -1,21 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content" 
-    android:orientation="vertical"
-    >
- 
-<com.karriapps.tehilimlibrary.utils.TehilimTextView   
-    android:id="@+id/title"
-    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:textColor="@color/titleColor"
-    android:padding="10dp"
-    android:textSize="16sp"
-    android:text="@string/yehiTitle"
-    android:layout_gravity="@integer/title_gravity"
-    />   
-    <!-- 
+    android:orientation="vertical" >
+
+    <ImageView
+        android:id="@+id/expand"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:contentDescription="@string/plus"
+        android:padding="5dp"
+        android:src="?attr/expand_icon"
+        android:visibility="visible" />
+
+    <com.karriapps.tehilimlibrary.utils.TehilimTextView
+        android:id="@+id/title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@+id/expand"
+        android:padding="10dp"
+        android:text="@string/yehiTitle"
+        android:textColor="@color/titleColor"
+        android:textSize="16sp" />
+    <!--
 <ImageView 
     android:id="@+id/favorite"
     android:layout_width="wrap_content"
@@ -26,28 +34,18 @@
     android:contentDescription="@string/ok"
     android:padding="5dp"
     />
-    
-<ImageView
-    android:id="@+id/expand"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_centerVertical="true"
-    android:layout_alignParentRight="true"
-    android:contentDescription="@string/plus"
-    android:src="?attr/expand_icon"
-    android:padding="5dp"
-    android:visibility="visible"
-    />
- -->
 
-<com.karriapps.tehilimlibrary.utils.TehilimTextView   
-    android:id="@+id/text"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:gravity="start"
-    android:text="@string/yehiBefore"
-    android:padding="10dp"
-    />
+    -->
 
-</LinearLayout>
+    <com.karriapps.tehilimlibrary.utils.TehilimTextView
+        android:id="@+id/text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/title"
+        android:textColor="?attr/text_color"
+        android:gravity="start"
+        android:orientation="vertical"
+        android:padding="10dp"
+        android:text="@string/yehiBefore" />
+
+</RelativeLayout>
