--- a/Tehilim/res/values/tfilot.xml
+++ b/Tehilim/res/values/tfilot.xml
@@ -59,4 +59,125 @@
 <br>
 ]]> </string>
 
+<string name="kadishEdot">
+<![CDATA[
+יִתְגַּדַּל וְיִתְקַדַּשׁ שְׁמֵהּ רַבָּא. <small> (אמן) </small>:
+<br>
+בְּעָלְמָא דִּי בְרָא, כִּרְעוּתֵהּ. וְיַמְלִיךְ מַלְכוּתֵהּ. וְיַצְמַח פֻּרְקָנֵהּ. וִיקָרֵב מְשִׁיחֵהּ. <small> (אמן) </small>:
+<br>
+בְּחַיֵּיכון וּבְיומֵיכון וּבְחַיֵּי דְכל בֵּית יִשְׂרָאֵל בַּעֲגָלָא וּבִזְמַן קָרִיב וְאִמְרוּ אָמֵן. <small> (אמן) </small>:
+<br>
+יְהֵא שְׁמֵהּ רַבָּא מְבָרַךְ. לְעָלַם וּלְעָלְמֵי עָלְמַיָּא יִתְבָּרַךְ. וְיִשְׁתַּבַּח. וְיִתְפָּאַר. וְיִתְרומַם. וְיִתְנַשֵּׂא. וְיִתְהַדָּר. וְיִתְעַלֶּה. וְיִתְהַלָּל שְׁמֵהּ דְּקֻדְשָׁא בְּרִיךְ הוּא. <small> (אמן) </small>:
+<br>
+לְעֵלָּא מִן כָּל בִּרְכָתָא. שִׁירָתָא. תִּשְׁבְּחָתָא וְנֶחָמָתָא. דַּאֲמִירָן בְּעָלְמָא וְאִמְרוּ אָמֵן. <small> (אמן) </small>:
+<br>
+יְהֵא שְׁלָמָא רַבָּא מִן שְׁמַיָּא. חַיִּים וְשָׂבָע וִישׁוּעָה וְנֶחָמָה וְשֵׁיזָבָא וּרְפוּאָה וּגְאֻלָּה וּסְלִיחָה וְכַפָּרָה וְרֵיוַח וְהַצָּלָה. לָנוּ וּלְכָל עַמּו יִשְׂרָאֵל וְאִמְרוּ אָמֵן. <small> (אמן) </small>:
+<br>
+עושֶׂה שָׁלום בִּמְרומָיו. הוּא בְּרַחֲמָיו יַעֲשֶׂה שָׁלום עָלֵינוּ. וְעַל כָּל עַמּו יִשְׂרָאֵל וְאִמְרוּ אָמֵן. <small> (אמן) </small>:
+<br>
+]]>
+</string>
+
+<string name="kadishSefarad">
+<![CDATA[
+יִתְגַּדַּל וְיִתְקַדַּשׁ שְׁמֵהּ רַבָּא. <small> (אמן) </small>:
+<br>
+בְּעָלְמָא דִּי בְרָא כִרְעוּתֵהּ וְיַמְלִיךְ מַלְכוּתֵהּ וְיַצְמַח פֻּרְקָנֵהּ וִיקָרֵב מְשִׁיחֵהּ. <small> (אמן) </small>:
+<br>
+בְּחַיֵּיכון וּבְיומֵיכון וּבְחַיֵּי דְכָל בֵּית יִשרָאֵל בַּעֲגָלָא וּבִזְמַן קָרִיב. וְאִמְרוּ אָמֵן: <small> (אמן) </small>:
+<br>
+יְהֵא שְׁמֵהּ רַבָּא מְבָרַךְ לְעָלַם וּלְעָלְמֵי עָלְמַיָּא יִתְבָּרַךְ.
+וְיִשְׁתַּבַּח וְיִתְפָּאֵר וְיִתְרומֵם וְיִתְנַשּא וְיִתְהַדָּר וְיִתְעַלֶּה וְיִתְהַלָּל שְׁמֵהּ דְּקֻדְשָׁא. בְּרִיךְ הוּא.  <small> (בריך הוא) </small>:
+<br>
+לְעֵלָּא מִן כָּל בִּרְכָתָא וְשִׁירָתָא תֻּשְׁבְּחָתָא וְנֶחֱמָתָא דַּאֲמִירָן בְּעָלְמָא. וְאִמְרוּ אָמֵן:
+<small> (אמן) </small>:
+<br>
+יְהֵא שְׁלָמָא רַבָּא מִן שְׁמַיָּא וְחַיִּים טובִים עָלֵינוּ וְעַל כָּל יִשרָאֵל. וְאִמְרוּ אָמֵן:  <small> (אמן) </small>:
+<br>
+עוֹשֶׁה שָׁלום בִּמְרומָיו הוּא יַעֲשה שָׁלום עָלֵינוּ וְעַל כָּל יִשרָאֵל וְאִמְרוּ אָמֵן:  <small> (אמן) </small>:
+<br>
+]]>    
+</string>
+
+<string name="kadishAshkenaz">
+<![CDATA[
+יִתְגַּדַּל וְיִתְקַדַּשׁ שְׁמֵהּ רַבָּא. <small> (אמן) </small>:
+<br>
+בְּעָלְמָא דִּי בְרָא כִרְעוּתֵהּ וְיַמְלִיךְ מַלְכוּתֵהּ בְּחַיֵּיכון וּבְיומֵיכון וּבְחַיֵּי דְכָל בֵּית יִשרָאֵל בַּעֲגָלָא וּבִזְמַן קָרִיב, וְאִמְרוּ אָמֵן:  <small> (אמן) </small>:
+<br>
+יְהֵא שְׁמֵהּ רַבָּא מְבָרַךְ לְעָלַם וּלְעָלְמֵי עָלְמַיָּא יִתְבָּרַךְ.
+וְיִשְׁתַּבַּח וְיִתְפָּאֵר וְיִתְרומֵם וְיִתְנַשּא וְיִתְהַדָּר וְיִתְעַלֶּה וְיִתְהַלָּל שְׁמֵהּ דְּקֻדְשָׁא. בְּרִיךְ הוּא.  <small> (בריך הוא) </small>:
+<br>
+לְעֵלָּא מִן כָּל בִּרְכָתָא וְשִׁירָתָא תֻּשְׁבְּחָתָא וְנֶחֱמָתָא דַּאֲמִירָן בְּעָלְמָא. וְאִמְרוּ אָמֵן:
+<small> (אמן) </small>:
+<br>
+יְהֵא שְׁלָמָא רַבָּא מִן שְׁמַיָּא וְחַיִּים טובִים עָלֵינוּ וְעַל כָּל יִשרָאֵל. וְאִמְרוּ אָמֵן:  <small> (אמן) </small>:
+<br>
+עושֶׂה שָׁלום בִּמְרומָיו הוּא יַעֲשה שָׁלום עָלֵינוּ וְעַל כָּל יִשרָאֵל וְאִמְרוּ אָמֵן:  <small> (אמן) </small>:
+<br>    
+]]>
+</string>
+
+<string name="kadishChabad">
+<![CDATA[
+יִתְגַּדַּל וְיִתְקַדַּשׁ שְׁמֵהּ רַבָּא. <small>(אָמֵן)</small> 
+<br>
+בְּעָלְמָא דִּי בְרָא כִרְעוּתֵהּ וְיַמְלִיךְ מַלְכוּתֵהּ, וְיַצְמַח פֻּרְקָנֵהּ וִיקָרֵב מְשִׁיחֵהּ. <small>(אָמֵן)</small> 
+<br>
+בְּחַיֵּיכוֹן וּבְיוֹמֵיכוֹן וּבְחַיֵּי דְכָל בֵּית יִשְׂרָאֵל, בַּעֲגָלָא וּבִזְמַן קָרִיב. וְאִמְרוּ אָמֵן:  
+<br><br>
+יְהֵא שְׁמֵהּ רַבָּא מְבָרַךְ לְעָלַם וּלְעָלְמֵי עָלְמַיָּא, יִתְבָּרֵךְ,  וְיִשְׁתַּבַּח, וְיִתְפָּאֵר, וְיִתְרוֹמֵם, וְיִתְנַשֵּׂא, וְיִתְהַדָּר, וְיִתְעַלֶּה, וְיִתְהַלָּל, שְׁמֵהּ דְקֻדְשָׁא בְּרִיךְ הוּא. <small>(אָמֵן)</small> לְעֵלָּא מִן כָּל בִּרְכָתָא וְשִׁירָתָא, תֻּשְׁבְּחָתָא וְנֶחֱמָתָא, דַּאֲמִירָן בְּעָלְמָא, וְאִמְרוּ אָמֵן:
+<br><br>
+יְהֵא שְׁלָמָה רבָּא מִן שְׁמַיָּא וְחַיִּים טוֹבִים עָלֵינוּ וְעַל כָּל יִשְֹרָאֵל, וְאִמְרוּ אָמֵן:
+<br><br>
+עוֹשֶׁה שָׁלום בִּמְרוֹמָיו הוּא יַעֲשֶֹה שָׁלוֹם עָלֵינוּ  וְעַל כָּל יִשְֹרָאֵל, וְאִמְרוּ אָמֵן:
+<br>
+]]>   
+</string>
+
+<string name="hashkavaMan">
+<![CDATA[
+טוֹב שֵׁם מִשֶּׁמֶן טוֹב. וְיוֹם הַמָּוֶת מִיּוֹם הִוָּלְדוֹ: סוֹף דָּבָר הַכֹּל נִשְׁמָע. אֶת-הָאֱלֹהִים יְרָא, וְאֶת מִצְוֹתָיו שְׁמוֹר, כִּי-זֶה כָּל-הָאָדָם: יַעְלְזוּ חֲסִידִים בְּכָבוֹד. יְרַנְּנוּ עַל מִשְׁכְּבוֹתָם:
+<br><br>
+<small>בהשכבה לאדם גדול אומרים פסוקים אלו:
+<br>
+וְהַחָכְמָה מֵאַיִן תִּמָּצֵא. וְאֵיזֶה מְקוֹם בִּינָה: אַשְׁרֵי אָדָם מָצָא חָכְמָה. וְאָדָם יָפִיק תְּבוּנָה: מָה רַב-טוּבְךָ אֲשֶׁר צָפַנְתָּ לִּירֵאֶיךָ. פָּעַלְתָּ לַחוֹסִים בָּךְ, נֶגֶד בְּנֵי אָדָם: מַה-יָּקָר חַסְדְּךָ אֱלֹהִים. וּבְנֵי אָדָם, בְּצֵל כְּנָפֶיךָ יֶחֱסָיוּן: יִרְוְיֻן מִדֶּשֶׁן בֵּיתֶךָ. וְנַחַל עֲדָנֶיךָ תַשְׁקֵם:
+</small>
+<br><br>
+הַמְּרַחֵם עַל-כָּל-בְּרִיּוֹתָיו, הוּא יָחוּס וְיַחְמוֹל וִירַחֵם עַל נֶפֶשׁ רוּחַ וּנְשָׁמָה שֶׁל הַנִּפְטָר בְּשֵׁם טוֹב מִן הָעוֹלָם (פלוני בן פלונית),
+<br><br>
+<small>ויש נוהגים לומר נוסח זה הארוך:</small>
+<br>
+מְנוּחָה נְכוֹנָה בִּישִׁיבָה עֶלְיוֹנָה, בְּמַעֲלַת קְדוֹשִׁים וּטְהוֹרִים, כְּזוֹהַר הָרָקִיעַ מְאִירִים וּמַזְהִירִים. וְחִלּוּץ עֲצָמִים, וְכַפָּרַת אֲשָׁמִים, וְהַרְחָקַת פֶּשַׁע, וְהַקְרָבַת יֶשַׁע, וְחֶמְלָה וַחֲנִינָה, מִלִּפְנֵי שׁוֹכֵן מְעוֹנָה. וְחוּלָקָא טָבָא, לְחַיֵּי הָעוֹלָם הַבָּא,  שָׁם תְּהֵא מְנַת וּמְחִיצַת וִישִׁיבַת נֶפֶשׁ הַשֵּׁם הַטּוֹב (פלוני בן פלונית),
+רוּחַ יְהוָֹה תְּנִיחֶנּוּ בְגַן עֵדֶן, דְּאִתְפְּטַר מִן עָלְמָא הָדֵין, כִּרְעוּת אֱלָהָא מָרֵא שְׁמַיָּא וְאַרְעָא. מֶלֶךְ מַלְכֵי הַמְּלָכִים בְּרַחֲמָיו יְרַחֵם עָלָיו, וְיָחוּס וְיַחְמוֹל עָלָיו. מֶלֶךְ מַלְכֵי הַמְּלָכִים בְּרַחֲמָיו יַסְתִּירֵהוּ בְצֵל כְּנָפָיו וּבְסֵתֶר אָהֳלוֹ, לַחֲזוֹת בְּנֹעַם יְהוָֹה וּלְבַקֵּר בְּהֵיכָלוֹ. וּלְקֵץ הַיָּמִין יַעֲמִידֵהוּ, וּמִנַּחַל עֲדָנָיו יַשְׁקֵהוּ. וְיִצְרוֹר  בִּצְרוֹר הַחַיִּים נִשְׁמָתוֹ, וְיָשִׂים כָּבוֹד מְנוּחָתוֹ, יְהוָֹה הוּא נַחֲלָתוֹ. וְיִלָּוֶה אֵלָיו הַשָּׁלוֹם, וְעַל מִשְׁכָּבוֹ יִהְיֶה שָׁלוֹם. כְּדִכְתִיב: יָבֹא שָׁלוֹם, יָנוּחוּ עַל-מִשְׁכְּבוֹתָם. הוֹלֵךְ נְכוֹחוֹ: הוּא וְכָל-בְּנֵי יִשְׂרָאֵל הַשּׁוֹכְבִים עִמּוֹ, בִּכְלַל הָרַחֲמִים וְהַסְּלִיחוֹת, וְכֵן יְהִי רָצוֹן וְנֹאמַר אָמֵן:
+<br>
+]]>    
+</string>
+
+<string name="haskavaWoman">
+<![CDATA[
+אֵשֶׁת חַיִל מִי יִמְצָא. וְרָחוֹק מִפְּנִינִים מִכְרָהּ: שֶׁקֶר הַחֵן וְהֶבֶל הַיּוֹפִי. אִשָּׁה יִרְאַת יְהוָֹה יאהדונהי הִיא תִתְהַלָּל: תְּנוּ-לָהּ מִפְּרִי יָדֶיהָ. וִיהַלְלוּהָ בַשְּׁעָרִים מַעֲשֶׂיהָ:
+<br><br>
+הַמְּרַחֵם עַל-כָּל-בְּרִיּוֹתָיו, הוּא יָחוּס וְיַחְמוֹל וִירַחֵם עַל נֶפֶשׁ רוּחַ וּנְשָׁמָה שֶׁל הַנִּפְטֶרֶת בְּשֵׁם טוֹב מִן הָעוֹלָם (פלונית בת פלונית), רוּחַ יְהוָֹה תְּנִיחֶנָּה בְגַן עֵדֶן, הִיא וְכָל-מֵתֵי יִשְׂרָאֵל הַשּׁוֹכְבוֹת עִמָּהּ, בִּכְלַל הָרַחֲמִים וְהַסְּלִיחוֹת, וְכֵן יְהִי רָצוֹן וְנֹאמַר אָמֵן.
+<br><br>
+<small>ויש אומרים נוסח זה:</small>
+<br>
+רַחֲמָנָא דְרַחֲמָנוּתָא דִילֵהּ הִיא, וּבְמֵימְרֵהּ אִתְבְּרִיאוּ עָלְמַיָּא – עָלְמָא הָדֵין וְעָלְמָא דְאָתֵי, וּגְנַז בֵּהּ צַדְקָנִיּוֹת וְחַסְדָּנִיּוֹת דְּעַבְדָּן רְעוּתֵהּ, וּבְמֵימְרֵהּ וּבְתֻקְפֵּה יֵאמַר לְמֵיעַל קֳדָמוֹהִי דֻּכְרַן נֶפֶשׁ הָאִשָּׁה הַכְּבוּדָּה וְהַצְּנוּעָה וְהַנִּכְבֶּדֶת מָרַת (פלונית בת פלונית), רוּחַ יְהוָֹה יאהדונהי תְּנִיחֶנָּה בְגַן עֵדֶן, דְּאִתְפְּטָרַת מִן עָלְמָא הָדֵין, כִּרְעוּת אֱלָהָא מָרֵא שְׁמַיָּא וְאַרְעָא. הַמֶּלֶךְ בְּרַחֲמָיו יָחוּס וְיַחְמוֹל עָלֶיהָ, וְיִלָּוֶה אֵלֶיהָ הַשָּׁלוֹם, וְעַל מִשְׁכָּבָהּ יִהְיֶה שָׁלוֹם. כְּדִכְתִיב: יָבֹא שָׁלוֹם, יָנוּחוּ עַל מִשְׁכְּבוֹתָם. הוֹלֵךְ נְכוֹחוֹ: הִיא וְכָל-בְּנוֹת יִשְׂרָאֵל הַשּׁוֹכְבוֹת עִמָּהּ, בִּכְלָל הָרַחֲמִים וְהַסְּלִיחוֹת, וְכֵן יְהִי רָצוֹן וְנֹאמַר אָמֵן:
+<br>
+]]>    
+</string>
+
+<string name="elMaleMan">
+<![CDATA[
+אֵל מָלֵא רַחֲמִים שׁוֹכֵן בַּמָּרוֹמִים, הַמְצֵא מְנוּחָה נְכוֹנָה תַּחַת כַּנְפֵי הַשְּׁכִינָה בְּמַעֲלוֹת קְדוֹשִים וּטְהוֹרִים כְּזוֹהַר הָרָקִיעַ מַזְהִירִים אֶת נִשְׁמַת פלוני בן פלוני, שֶׁהָלַךְ לְעוֹלָמוֹ בַּעֲבוּר ש {בן המשפחה} נָדַב צְדָקָה בְּעַד הַזְכָּרַת נִשְׁמָתוֹ. בְּגַן עֵדֶן תְּהֵא מְנוּחָתוֹ. לָכֵן בַּעַל הָרַחֲמִים יַסְתִּירֵהוּ בְּסֵתֶר כְּנָפָיו לְעוֹלָמִים, וְיִצְרוֹר בִּצְרוֹר הַחַיִּים אֶת נִשְׁמָתוֹ. יְיָ הוּא נַחֲלָתוֹ וְיָנוּחַ בְּשָׁלוֹם עַל מִשְׁכָּבוֹ, וְנֹאמַר אָמֵן:
+<br>
+]]>    
+</string>
+
+<string name="elMaleWoman">
+<![CDATA[
+אֵל מָלֵא רַחֲמִים שׁוֹכֵן בַּמָּרוֹמִים, הַמְצֵא מְנוּחָה נְכוֹנָה תַּחַת כַּנְפֵי הַשְּׁכִינָה בְּמַעֲלוֹת קְדוֹשִים וּטְהוֹרִים כְּזוֹהַר הָרָקִיעַ מַזְהִירִים אֶת נִשְׁמַת פלונית בת פלונית שֶׁהָלֶכָה לְעוֹלָמָהּ, בַּעֲבוּר ש {בן המשפחה} נָדַב צְדָקָה בְּעַד הַזְכָּרַת נִשְׁמָתָהּ, בְּגַן עֵדֶן תְּהֵא מְנוּחָתָה. לָכֵן בַּעַל הָרַחֲמִים יַסְתִּירֶהָ בְּסֵתֶר כְּנָפָיו לְעוֹלָמִים, וְיִצְרוֹר בִּצְרוֹר הַחַיִּים אֶת נִשְׁמָתָהּ יְיָ הוּא נַחֲלָתָהּ, וְתָנוּחַ בְּשָׁלוֹם עַל מִשְׁכָּבָהּ וְנֹאמַר אָמֵן:
+<br>
+]]>    
+</string>
 </resources>
