--- a/Tehilim/res/layout/about.xml
+++ b/Tehilim/res/layout/about.xml
@@ -61,7 +61,7 @@
             android:gravity="start|bottom"
             android:paddingBottom="5dp"
             android:paddingStart="10dp"
-            android:text="@string/uv_contact_us"
+            android:text="@string/contact_us"
             android:textStyle="bold" />
 
         <Button
