--- a/Tehilim/res/values-v14/style.xml
+++ b/Tehilim/res/values-v14/style.xml
@@ -29,7 +29,7 @@
         <item name="expand_icon">@drawable/expand_button_dark</item>
         <item name="action_favorite_icon">@drawable/favorite_button_dark</item>
         <item name="ic_launcher">@drawable/ic_launcher_dark</item>
-        <item name="text_color">@android:color/white</item>
+        <item name="text_color">#ffffff</item>
         <item name="side_background">@android:color/darker_gray</item>
         <item name="choose_items_icon">@drawable/ic_action_storage_dark</item>
         <item name="android:actionBarItemBackground">@drawable/selectable_background_tehilim_dark</item>
@@ -41,6 +41,7 @@
         <item name="android:actionModeBackground">@drawable/cab_background_top_tehilim_dark</item>
         <item name="android:actionModeSplitBackground">@drawable/cab_background_bottom_tehilim_dark</item>
         <item name="android:actionModeCloseButtonStyle">@style/ActionButton.CloseMode.Tehilim_dark</item>
+        <item name="android:textColor">#ffffff</item>
     </style>
 
     <style name="AppBaseTheme" parent="@style/Theme.AppCompat.Light">
@@ -62,8 +63,9 @@
         <item name="expand_icon">@drawable/expand_button</item>
         <item name="action_favorite_icon">@drawable/favorite_button</item>
         <item name="ic_launcher">@drawable/ic_launcher</item>
-        <item name="text_color">@android:color/black</item>
+        <item name="text_color">#000000</item>
         <item name="side_background">@android:color/background_light</item>
+        <item name="android:textColor">#000000</item>
     </style>
 
     <style name="ActionBar.Solid.Tehilim" parent="@style/Widget.AppCompat.Light.ActionBar.Solid">
