--- a/Tehilim/res/values/attr.xml
+++ b/Tehilim/res/values/attr.xml
@@ -6,7 +6,7 @@
 <attr name="expand_icon" format="reference"/>
 <attr name="action_favorite_icon" format="reference"/>
 <attr name="ic_launcher" format="reference"/>
-<attr name="text_color" format="reference"/>
+<attr name="text_color" format="reference|color"/>
 <attr name="side_background" format="reference"/>
 <attr name="choose_items_icon" format="reference"/>
 </resources>
