--- a/Tehilim/res/values/preferences_keys.xml
+++ b/Tehilim/res/values/preferences_keys.xml
@@ -10,4 +10,8 @@
     <string name="silent_key">silent</string>
     <string name="read_key">read</string>
     <string name="first_key">firstTime</string>
+    <string name="last_location_name_key">loc_name</string>
+    <string name="last_location_position_key">loc_name</string>
+    <string name="last_location_values_key">loc_name</string>
+    <string name="last_location_type_key">loc_name</string>
 </resources>
