--- a/Tehilim/res/values/preferences_keys.xml
+++ b/Tehilim/res/values/preferences_keys.xml
@@ -14,4 +14,5 @@
     <string name="last_location_position_key">loc_position</string>
     <string name="last_location_values_key">loc_values</string>
     <string name="last_location_type_key">loc_type</string>
+    <string name="scroll_key">scroll</string>
 </resources>
