--- a/tehilimlibrary/src/main/res/drawable/ic_action_scroll.xml
+++ b/tehilimlibrary/src/main/res/drawable/ic_action_scroll.xml
@@ -2,5 +2,6 @@
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_checked="true" android:drawable="@drawable/ic_action_pause" />
+    <item android:state_active="true" android:drawable="@drawable/ic_action_pause" />
     <item android:drawable="@drawable/ic_action_play" />
 </selector>
