--- a/tehilimlibrary/src/main/res/layout/about.xml
+++ b/tehilimlibrary/src/main/res/layout/about.xml
@@ -42,6 +42,7 @@
             android:text="2.0.1" />
 
         <TextView
+            android:text="@string/version_info"
             android:id="@+id/version_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
