--- a/tehilimlibrary/src/main/res/layout/editable_last_view_group.xml
+++ b/tehilimlibrary/src/main/res/layout/editable_last_view_group.xml
@@ -2,17 +2,19 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="48dp"
     android:padding="10dp">
 
     <TextView
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
+        android:textAppearance="@android:style/TextAppearance.Medium"
+        android:id="@+id/groupTitle"
+        android:text="Some Title"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:gravity="start|center_vertical" />
 
     <ImageView
+        android:id="@+id/groupEditImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="?attr/action_edit_icon"
