--- a/tehilimlibrary/src/main/res/layout/expandable_list_item.xml
+++ b/tehilimlibrary/src/main/res/layout/expandable_list_item.xml
@@ -19,5 +19,5 @@
     android:layout_height="wrap_content"
     android:textAppearance="@android:style/TextAppearance.Medium"
     android:gravity="center_vertical"
-    android:paddingStart="40dp"
+    android:paddingLeft="40dp"
     android:minHeight="48dp" />
