--- a/tehilimlibrary/src/main/res/layout/side_panel.xml
+++ b/tehilimlibrary/src/main/res/layout/side_panel.xml
@@ -32,7 +32,7 @@
                 android:textSize="14sp"
                 android:textStyle="bold" />
 
-            <ListView
+            <ExpandableListView
                 android:id="@+id/quick_list"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
