--- a/tehilimlibrary/src/main/res/layout/choose_bookmark.xml
+++ b/tehilimlibrary/src/main/res/layout/choose_bookmark.xml
@@ -1,7 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/bookmark_listview"
-    android:orientation="vertical"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:orientation="vertical">
+
+    <include
+        layout="@layout/bookmarks_title_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/bookmark_dialog_title" />
+
+    <ListView
+        android:id="@+id/bookmark_listview"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_weight="1"
+        android:layout_height="match_parent" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_weight="1"
+        >
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/bookmark_cancel"
+            android:text="@string/cancel"
+            android:layout_weight="1"
+            />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/bookmark_ok"
+            android:layout_weight="1"
+            android:text="@string/save"
+            />
+        </LinearLayout>
+</LinearLayout>
