--- a/tehilimlibrary/src/main/res/values/preferences_keys.xml
+++ b/tehilimlibrary/src/main/res/values/preferences_keys.xml
@@ -11,6 +11,7 @@
     <string name="silent_key">silent</string>
     <string name="read_key">read</string>
     <string name="first_key">firstTime</string>
+    <string name="favorites_key">favorites</string>
     <string name="last_location_json">loc_json_new</string>
     <string name="last_location_name_key">loc_name</string>
     <string name="last_location_position_key">loc_position</string>
