--- a/tehilimlibrary/src/main/res/layout-sw600dp/choose_bookmark.xml
+++ b/tehilimlibrary/src/main/res/layout-sw600dp/choose_bookmark.xml
@@ -7,7 +7,8 @@
     <include
         layout="@layout/bookmarks_title_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:id="@+id/bookmark_dialog_title" />
 
     <ListView
         android:id="@+id/bookmark_listview"
