--- a/tehilimlibrary/src/main/res/layout/bookmarks_title_layout.xml
+++ b/tehilimlibrary/src/main/res/layout/bookmarks_title_layout.xml
@@ -21,5 +21,5 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:gravity="center"
-        android:background="?attr/action_edit_icon" />
+        android:background="?attr/action_new_icon" />
 </LinearLayout>
