--- a/tehilimlibrary/src/main/res/values/attr.xml
+++ b/tehilimlibrary/src/main/res/values/attr.xml
@@ -11,4 +11,5 @@
     <attr name="choose_items_icon" format="reference" />
     <attr name="action_save_icon" format="reference" />
     <attr name="action_edit_icon" format="reference" />
+    <attr name="action_new_icon" format="reference" />
 </resources>
